--- a/frontend/search_bar.html
+++ b/frontend/search_bar.html
@@ -6,6 +6,9 @@
         <title>Data Structure Final Project</title>
     </head>
     <body>
+      <h1>
+        Data Structure Final Project
+      </h1>
         <div class="wrap">
             <div class="search">
               <input class="search-bar" type="text" name="search" id="search" placeholder="輸入名稱">
@@ -24,5 +27,14 @@
             </div>
           </div>
     </body>
+      <hr>
+      <p>I'm creating a link to
+        <a href="https://www.mozilla.org/en-US/"
+           title="The best place to find more information about Mozilla's
+                  mission and how to contribute">the Mozilla homepage</a>.
+      </p>
+      <p>
+        This is the main content of the page
+      </p>
 
 </html>
